[package]
name = "steering"
version = "0.1.0"
authors = ["Orhan Balci <orhanbalci@gmail.com>"]

[dependencies]
nalgebra="*"
alga="*"
num-traits="*"

[dev-dependencies]
imgui="*"
time="*"

[dev-dependencies.glium]
version="0.14"
features=["glutin"]
default-featrues=false

[[examples]]
name="steering_examples"
path="examples/steering_examples.rs"
