[package]
authors = ["Orhan Balci <orhanbalci@gmail.com>"]
name = "steering"
version = "0.1.0"
description = "Steering calculations for autonomous agents"
documentation = "http://orhanbalci.github.io/rust-steering-behaviors"
repository = "https://github.com/orhanbalci/rust-steering-behaviors.git"
homepage = "https://github.com/orhanbalci"
keywords = ["gamedev","ai", "behavior"]
license = "MIT"
exclude = [".travis.yml"]
readme = "README.md"
categories = ["game-engines"]

[dependencies]
alga = "0.5.2"
derive_builder = "0.5.0"
nalgebra = "0.13.1"
num-traits = "0.1.40"

[dev-dependencies]
termion = "1.5.1"
tui = "0.1.3"

[[example]]
name="testbehaviors"
source="examples/testbehaviors.rs"
